--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 aiofiles==0.4.0
 aiomysql==0.0.19
 asn1crypto==0.24.0
+bcrypt==3.1.4
 certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
 cryptography==2.3.1
 get==1.0.3
 idna==2.7
-peewee==3.7.1
+peewee==2.10.2
 peewee-async==0.5.12
 Pillow==5.3.0
 post==1.0.2
@@ -16,6 +17,7 @@ pycparser==2.19
 PyJWT==1.6.4
 PyMySQL==0.9.2
 query-string==1.0.2
+redis==2.10.6
 request==1.0.2
 requests==2.20.0
 six==1.11.0
@@ -23,3 +25,4 @@ tornado==5.1.1
 urllib3==1.24.1
 WTForms==2.2.1
 WTForms-JSON==0.3.3
+wtforms-tornado==0.0.2
